<resources>
    <string name="url" translatable="false">http://dashboard.khadamatnow.com/public/api/</string>
    <string name="image_url" translatable="false">http://dashboard.khadamatnow.com/storage/app/</string>
<string name="password">Password</string>
    <string name="wrong_phone_pass">Wrong username or password</string>
    <string name="app_name">Khadamat-Provider</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="aboutus">About us</string>
    <string name="check_internet">Please check your internet connection !</string>
    <string name="press_back">Click back again to exit</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="fill_error">Please fill all fields first !</string>
    <string name="try_later">Please try again later.</string>
    <string name="verfication_code">Verfication code</string>
    <string name="enter_verfication">Please type the verification code sent to </string>
    <string name="verify">Verify</string>
    <string name="please_enter_number">Khadamat will send you SMS verification message, please enter country code and  phone number.</string>
    <string name="full_name">Full name</string>
    <string name="send">Send</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>
    <string name="insure_dialog">you will be verifying the phone number .</string>
    <string name="is_this_ok">Is this okay or would you like to edit the number?</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="phone2">Phone 2</string>
    <string name="_9_123_456_78">912 345 678</string>
    <string name="gender">Gender</string>
    <string name="edit_birthdate">Click here to edit Birthdate</string>
    <string name="date_example" translatable="false">YYYY-MM-DD</string>
    <string name="service">Service Type</string>
    <string name="sub_service">Sub-Service Type</string>
    <string name="certificates">Certificates</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="main_service">Main Service</string>
    <string name="sub_services">Sub Services</string>
    <string name="congratulation">Congratulation</string>
    <string name="gift_comment">You have got three months free to try the application and then you can subscribe</string>
    <string name="thanks">Thanks</string>
    <string name="agriculture">Agriculture</string>
    <string name="education">Education</string>
    <string name="eventorg">Event Organizer</string>
    <string name="law">Law and accounting</string>
    <string name="maintenance">Maintenance</string>
    <string name="realestate">Real-Estate</string>
    <string name="other">Other</string>
    <string name="transport">Transport</string>
    <string name="health">Health</string>
    <string name="app_ver" translatable="false">Version 1.0.0</string>
    <string name="intro" translatable="false">dsjfknkjnfkjendejkfnedkjfejfnkjenfkjewnjfkewnkfjewnkfnekj</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="job">Job</string>
    <string name="certificate">Certificate</string>
    <string name="age">Age</string>
    <string name="call">Call</string>
    <string name="rate">Rate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish">Finish</string>
    <string name="search">Search</string>
    <string name="view_more">View More</string>
    <string name="performance">Performance</string>
    <string name="price">Price</string>
    <string name="time_accuracy">Time accuracy</string>
    <string name="behaviour">Behaviour</string>
    <string name="thankyou">Thank you</string>
    <string name="signout">Sign out</string>
    <string name="change_language">Change language</string>
    <string name="setting">Setting</string>
    <string name="years_of_ex">Years of Experience</string>
    <string name="ex_desc">Experience Desc</string>
    <string name="verified">Verified</string>
    <string name="verification">Verification</string>
    <string name="num_of_rate">Number of Rates</string>
    <string name="you_picked">You Picked </string>
    <string name="short_month">3 Months</string>
    <string name="long_month">6 Months</string>
    <string name="priceString">For Only </string>
    <string name="classic_features">3 months of using all services in application.</string>
    <string name="vip_features">6 months of using all services in application.</string>
    <string name="subscribe">Subscribe</string>
    <string name="please_choose_package">Please choose Package first !</string>
    <string name="subscribtion_underprocess">Thank you for your subscription we are processing your request .\n We will contact you for payment details as soon as possible</string>
    <string name="save">Save</string>
    <string name="packages">Packages</string>
</resources>
