<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_package"
            android:icon="@drawable/subscription"
            android:title="@string/packages" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/aboutus" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/changeLang"
                    android:icon="@drawable/ic_language"
                    android:title="@string/change_language" />
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@drawable/signout"
                    android:title="@string/signout" />
            </menu>
        </item>
    </group>


</menu>
