<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/otcLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_weight=".8"
                android:src="@drawable/sms" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:fontFamily="@font/handlee"
            android:gravity="bottom|center"
            android:text="@string/verfication_code"
            android:textColor="@color/primary_text"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enter_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.05"
            android:fontFamily="@font/handlee"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/enter_verfication"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.1"
            android:foregroundGravity="center"
            android:gravity="center">

            <com.goodiebag.pinview.Pinview
                android:id="@+id/pinView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                app:cursorVisible="false"
                app:forceKeyboard="true"
                app:hint="0"
                app:inputType="number"
                app:password="false"
                app:pinHeight="40dp"
                app:pinLength="4"
                app:pinWidth="40dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1">

            <Button
                android:id="@+id/verify_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/handlee"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>