<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        android:weightSum="4">

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1" />

        <LinearLayout
            android:id="@+id/classic_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            android:theme="@style/AppTheme"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/package1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="false"
                android:layout_weight=".5"
                android:background="@android:color/transparent"
                android:theme="@style/Theme.MaterialComponents"
                app:cardBackgroundColor="@android:color/transparent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.4"
                        android:background="@color/white"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:theme="@style/AppTheme">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classic"
                            android:theme="@style/AppTheme"
                            app:srcCompat="@drawable/classic" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:theme="@style/AppTheme">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight=".1"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:text="@string/short_month"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/classic_feature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/handlee"
                            android:isScrollContainer="true"
                            android:lineSpacingMultiplier="1.1"
                            android:overScrollMode="ifContentScrolls"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"

                            android:paddingEnd="5dp"
                            android:paddingBottom="10dp"
                            android:scrollbars="vertical"
                            android:text="@string/classic_features"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/classic_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:background="@color/white"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/priceString"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:theme="@style/AppTheme" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1" />

        <LinearLayout
            android:id="@+id/vip_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            android:theme="@style/AppTheme"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/package2"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_weight=".3"
                android:background="@android:color/transparent"
                android:theme="@style/Theme.MaterialComponents"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.4"
                        android:background="@color/white"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:theme="@style/AppTheme">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/vip"
                            android:theme="@style/AppTheme"
                            app:srcCompat="@drawable/vip" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".6"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:theme="@style/AppTheme">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight=".1"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:text="@string/long_month"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/vip_feature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/handlee"
                            android:lineSpacingMultiplier="1.1"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="5dp"

                            android:paddingBottom="10dp"
                            android:scrollbars="vertical"
                            android:text="@string/vip_features"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:theme="@style/AppTheme" />

                        <TextView
                            android:id="@+id/vip_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:background="@color/white"
                            android:fontFamily="@font/handlee"
                            android:gravity="center"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:text="@string/priceString"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:theme="@style/AppTheme" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>